fix: fix gateway section width on mobile resolutions

--- a/src/shared/components/gateway-section/index.module.css
+++ b/src/shared/components/gateway-section/index.module.css
@@ -111,5 +111,13 @@
 @media (--layout-lte-small) {
     .container {
         max-height: unset;
+
+        & .content {
+            width: var(--container-width-mobile);
+
+            & .sectionDescription p {
+                width: 90%;
+            }
+        }
     }
 }
